--- a/src/app/pages/childrens/edit-child/edit-child.component.html
+++ b/src/app/pages/childrens/edit-child/edit-child.component.html
@@ -120,6 +120,15 @@
                 {{ "child_data" | translate }}
               </a>
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link text-active-primary me-6"
+                [routerLink]="['attachments']"
+                routerLinkActive="active"
+              >
+                {{ "attachments" | translate }}
+              </a>
+            </li>
           </ul>
         </div>
       </div>
