--- a/src/app/pages/childrens/edit-child/child-programs/child-programs.component.html
+++ b/src/app/pages/childrens/edit-child/child-programs/child-programs.component.html
@@ -113,7 +113,7 @@
                   </span>
                 </a>
                 <a
-                  (click)="openScheduling(question.child_program.id)"
+                  (click)="openScheduling(question.child_program)"
                   class="btn btn-icon btn-bg-light btn-active-color-warning btn-sm me-1"
                 >
                   <span class="svg-icon svg-icon-3">
