--- a/src/app/pages/childrens/edit-child/edit-child.component.html
+++ b/src/app/pages/childrens/edit-child/edit-child.component.html
@@ -129,6 +129,15 @@
                 {{ "attachments" | translate }}
               </a>
             </li>
+            <li class="nav-item">
+              <a
+                      class="nav-link text-active-primary me-6"
+                      [routerLink]="['plans']"
+                      routerLinkActive="active"
+              >
+                {{ "plans" | translate }}
+              </a>
+            </li>
           </ul>
         </div>
       </div>
