--- a/src/app/pages/childrens/edit-child/evaluation/add-evaluation/add-evaluation.component.html
+++ b/src/app/pages/childrens/edit-child/evaluation/add-evaluation/add-evaluation.component.html
@@ -12,38 +12,62 @@
   </div>
   <div class="modal-body">
     <div class="row mb-6">
-      <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
+      <label class="col-lg-1 col-form-label required fw-bold fs-6">{{
         "MENU.FORM" | translate
-      }}</label>
+        }}</label>
       <div class="col-lg-3 fv-row">
         <select
-          class="form-select form-select-solid form-select-lg"
-          formControlName="form_id"
-          (change)="onFormSelectionChange($event)"
+                class="form-select form-select-solid form-select-lg"
+                formControlName="form_id"
         >
           <option [value]="null">
-            {{ translate.defaultLang == "ar" ? "اختر النموذج" : "Select Form" }}
+            {{
+            translate.defaultLang == "ar" ? "اختر النموذج" : "Select Form"
+            }}
           </option>
           <option [value]="statuses.id" *ngFor="let statuses of formList">
             {{ statuses?.name }}
           </option>
         </select>
       </div>
-      <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
+      <label class="col-lg-1 col-form-label required fw-bold fs-6">{{
         "note" | translate
-      }}</label>
+        }}</label>
       <div class="col-lg-3 fv-row">
         <input
-          [class.is-invalid]="f['note'].touched && f['note'].invalid"
-          type="text"
-          class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
-          placeholder="{{ 'note' | translate }}"
-          formControlName="note"
+                [class.is-invalid]="f['note'].touched && f['note'].invalid"
+                type="text"
+                class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
+                placeholder="{{ 'note' | translate }}"
+                formControlName="note"
         />
         <div
-          *ngIf="f['note'].invalid && f['note'].touched"
-          style="color: red"
+                *ngIf="f['note'].invalid && f['note'].touched"
+                style="color: red"
         ></div>
+      </div>
+      <label class="col-lg-1 col-form-label required fw-bold fs-6">{{
+        "evaluator" | translate
+        }}</label>
+      <div class="col-lg-3 fv-row">
+        <select
+                class="form-select form-select-solid form-select-lg"
+                formControlName="user_id"
+        >
+          <option [value]="null">
+            {{
+            translate.defaultLang == "ar"
+                    ? "اختر القائم بالتقييم"
+                    : "Select Evaluator"
+            }}
+          </option>
+          <option
+                  [value]="admin.id"
+                  *ngFor="let admin of adminList"
+          >
+            {{ admin.name }}
+          </option>
+        </select>
       </div>
     </div>
     <div class="row mb-6">
@@ -168,28 +192,71 @@
     <hr />
     <div formArrayName="questions">
       <div
-        *ngFor="let questions of items().controls; let i = index"
-        [formGroupName]="i"
+              *ngFor="let questions of items().controls; let i = index"
+              [formGroupName]="i"
       >
         <div class="row mb-6">
+          <label class="fw-bold fs-6">
+            {{ questionList[i]?.title }}
+          </label>
+        </div>
+        <div *ngIf="hasOptions(i)" class="row mb-6">
           <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
-            "MENU.QUESTIONS" | translate
-          }}</label>
-          <div class="col-lg-3 fv-row">
+            "answer" | translate
+            }}</label>
+          <div class="col-lg-8 fv-row">
+            <input
+                    type="text"
+                    class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
+                    placeholder="{{ 'answer' | translate }}"
+                    formControlName="answer"
+            />
+          </div>
+        </div>
+        <div *ngIf="!hasOptions(i)" class="row mb-6">
+          <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
+            "answer" | translate
+            }}</label>
+          <div class="col-lg-8 fv-row">
             <select
-              class="form-select form-select-solid form-select-lg"
-              formControlName="question_id"
+                    class="form-select form-select-solid form-select-lg"
+                    formControlName="answer"
             >
               <option [value]="null">
                 {{
-                  translate.defaultLang == "ar"
-                    ? "اختر سؤال"
-                    : "Select Question"
+                translate.defaultLang == "ar"
+                        ? "اختر الجواب"
+                        : "Select Answer"
                 }}
               </option>
               <option
-                [value]="statuses.id"
-                *ngFor="let statuses of questionList"
+                      [value]="statuses"
+                      *ngFor="let statuses of questionList[i].options"
+              >
+                {{ statuses }}
+              </option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-6">
+          <label class="col-lg-2 col-form-label required fw-bold fs-6" hidden>{{
+            "question" | translate
+            }}</label>
+          <div class="col-lg-3 fv-row" hidden>
+            <select
+                    class="form-select form-select-solid form-select-lg"
+                    formControlName="question_id"
+            >
+              <option [value]="null">
+                {{
+                translate.defaultLang == "ar"
+                        ? "اختر سؤال"
+                        : "Select Question"
+                }}
+              </option>
+              <option
+                      [value]="statuses.id"
+                      *ngFor="let statuses of questionList"
               >
                 {{ statuses?.title }}
               </option>
@@ -197,52 +264,14 @@
           </div>
           <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
             "note" | translate
-          }}</label>
-          <div class="col-lg-3 fv-row">
-            <input
-              type="text"
-              class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
-              placeholder="{{ 'note' | translate }}"
-              formControlName="note"
-            />
-          </div>
-        </div>
-        <div *ngIf="hasOptions(i)" class="row mb-6">
-          <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
-            "answer" | translate
-          }}</label>
+            }}</label>
           <div class="col-lg-8 fv-row">
             <input
-              type="text"
-              class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
-              placeholder="{{ 'answer' | translate }}"
-              formControlName="answer"
+                    type="text"
+                    class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
+                    placeholder="{{ 'note' | translate }}"
+                    formControlName="note"
             />
-          </div>
-        </div>
-        <div *ngIf="!hasOptions(i)" class="row mb-6">
-          <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
-            "answer" | translate
-          }}</label>
-          <div class="col-lg-8 fv-row">
-            <select
-              class="form-select form-select-solid form-select-lg"
-              formControlName="answer"
-            >
-              <option [value]="null">
-                {{
-                  translate.defaultLang == "ar"
-                    ? "اختر خيار"
-                    : "Select Option"
-                }}
-              </option>
-              <option
-                [value]="statuses"
-                *ngFor="let statuses of questionList[i].options"
-              >
-                {{ statuses }}
-              </option>
-            </select>
           </div>
         </div>
         <hr />
