--- a/src/app/pages/childrens/add-child/add-basic-child-data/add-basic-child-data.component.html
+++ b/src/app/pages/childrens/add-child/add-basic-child-data/add-basic-child-data.component.html
@@ -292,7 +292,7 @@
               type="text"
               class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
               placeholder="{{ 'block' | translate }}"
-              formControlName="other_center_year"
+              formControlName="block"
             />
           </div>
         </div>
