--- a/src/app/pages/childrens/edit-child/evaluation/edit-evaluation/edit-evaluation.component.html
+++ b/src/app/pages/childrens/edit-child/evaluation/edit-evaluation/edit-evaluation.component.html
@@ -47,6 +47,7 @@
             <select
               class="form-select form-select-solid form-select-lg"
               formControlName="form_id"
+              (change)="onFormSelectionChange($event)"
             >
               <option [value]="null">
                 {{
